--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -75,14 +75,15 @@
                                     
                 </div>   
             </div>   
+            {{object.data_emprestimo.month}}
     </div>
 
     {% if emprestimo %}   
         <button type="submit" class="btn btn-success" >Salvar Alterações</button>     
-        <a href="{% url 'emprestimo:emprestimo_pagamento_add' emprestimo.pk %}" class="btn btn-primary">Realizar pagamento</a> 
+        <a href="{% url 'emprestimo:emprestimo_pagamento_add' emprestimo.pk %}" class="btn btn-primary">Realizar pagamento </a> 
     {% else %}
         <a href="{% url 'emprestimo:emprestimo_list' %}" type="button" class="btn btn-danger">Cancelar</a>        
-        <button type="submit" class="btn btn-success" >Cadastrar</button>
+        <button type="submit" class="btn btn-success">Cadastrar</button>
     </form>
     {% endif %}
 
