Calculo de parcela em um unico botão

--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -57,23 +57,22 @@
                 <div class="col-sm-3"> 
                     <div class="form-group">
                         <label for="">{{form.data_emprestimo.label}}</label>
-                        {% render_field form.data_emprestimo class="form-control" id="data_emprestimo" onblur="somar()"%}                       
+                        {% render_field form.data_emprestimo class="form-control" id="data_emprestimo" %}                       
                     </div>
                 </div>       
             {% else %}            
                 <div class="col-sm-3">
                     <div class="form-group">
                         <label for="">{{form.data_emprestimo.label}}</label>   
-                        {% render_field form.data_emprestimo class="form-control" type="date" onblur="somar()"%}                    
+                        {% render_field form.data_emprestimo class="form-control" type="date" %}                    
                     </div>                  
                 </div>            
             {% endif %} 
             <div class="col-sm-3" > 
                 <div class="form-group" id="res">
                     <label for="">{{form.valor_prestacao.label}}</label>
-                    {% render_field form.valor_prestacao class="form-control" id="prestacao"%}    
-                                    
-                </div>   
+                    {% render_field form.valor_prestacao class="form-control" id="prestacao" %}
+                </div>  
             </div>               
     </div>
 
@@ -85,6 +84,7 @@
         <button type="submit" class="btn btn-success">Cadastrar</button>
     </form>
     {% endif %}
+    <button  onclick="somar()" class="btn btn-info">Calcular Parcela</button>
 
 <script>
     function toFixed(num, fixed) {
