--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -325,7 +325,7 @@ window.onload = function imprimir(){
             pactuado, mediante as condições seguintes.
             </p>
             <p class="fontmenor" >
-            <b>CLÁUSULA 2ª</b> - Que a quantia acima emprestada, parcelada, deverá ser adimplida ao <b>CREDOR</b> no dia de acordo com tabela abaixo:
+            <b>CLÁUSULA 2ª</b> - Que a quantia acima emprestada, parcelada, deverá ser adimplida ao <b>CREDOR</b> no dia de acordo conforme tabela abaixo:
             </p>
         `
         +
