commit de continuação em casa

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -457,7 +457,7 @@ window.onload = function imprimir(){
         <br>
         <div class="credito" >
             <strong> VALOR DO CRÉDITO </strong><br>
-            500,00
+            ${valor_emprestado}
         </div>
 
         <div class="titulo_quadro">QUADRO 01 - PARTES </div>
