--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -3,6 +3,8 @@
 {% block js %}{% endblock js %}
 {% block content %}
 
+
+
 <style>
     
     body {font-family: Arial;}
@@ -53,6 +55,11 @@
     @keyframes fadeEffect {
         from {opacity: 0;}
         to {opacity: 1;}
+    }
+
+    input {
+        text-transform: capitalize;
+        border-color: #ff9800;  
     }
 </style>
 
