--- a/projeto/avalista/templates/avalista_form.html
+++ b/projeto/avalista/templates/avalista_form.html
@@ -10,77 +10,12 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="form-group" >
-                    <label for="" class="required" >{{form.avalista.label}} </label>
-                    {% render_field form.avalista class="form-control"  %}
+                    <label for="" class="required" >{{form1.avalista.label}} </label>
+                    {% render_field form1.avalista class="form-control"  %}
                 </div>
             </div>
-            <div class="col-sm-3">                    
-                <div class="form-group" >                
-                    <label for="" class="required" >{{form.cpf_avalista.label}} </label>        
-                    {% render_field form.cpf_avalista class="form-control cpf-mask" type="text" %}
-                </div>
-            </div>  
-            <div class="col-sm-2">                    
-                <div class="form-group" >                
-                    <label for="" class="required" >{{form.rg_avalista.label}} </label>        
-                    {% render_field form.rg_avalista class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-2">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.orgao_expedidor_avalista.label}} </label>        
-                    {% render_field form.orgao_expedidor_avalista class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-2">
-                <div class="form-group">
-                    <label for="">{{form.estado_civil_avalista.label}}</label>
-                    {% render_field form.estado_civil_avalista class="form-control" %}
-                </div>  
-            </div>
-            <div class="col-sm-2">
-                <div class="form-group">
-                    <label for="">{{form.naturalidade_avalista.label}}</label>
-                    {% render_field form.naturalidade_avalista class="form-control" %}
-                </div>  
-            </div>
-            <div class="col-sm-2">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.cep.label}} </label>        
-                    {% render_field form.cep class="form-control" name="cep" type="text" id="cep" value="" size="10" maxlength="9" onblur="pesquisacep(this.value);"%}
-                            
-                </div>
-            </div>
-            <div class="col-sm-4">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.rua.label}} </label>        
-                    {% render_field form.rua class="form-control" name="rua" type="text" id="rua" size="60" %}
-                </div>
-            </div>
-            <div class="col-sm-1">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.numero_casa.label}} </label>        
-                    {% render_field form.numero_casa class="form-control" name="rua" type="text" id="rua" size="60" %}
-                </div>
-            </div>
-            <div class="col-sm-5">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.bairro.label}} </label>        
-                    {% render_field form.bairro class="form-control" name="bairro" type="text" id="bairro" size="40" %}
-                </div>
-            </div>
-            <div class="col-sm-4">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.cidade.label}} </label>        
-                    {% render_field form.cidade class="form-control" name="cidade" type="text" id="cidade" size="40"%}
-                </div>
-            </div>
-            <div class="col-sm-1">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.uf.label}} </label>        
-                    {% render_field form.uf class="form-control" name="uf" type="text" id="uf" size="2"%}
-                </div>
-            </div>
+            
+            
         </div>
         <br>
         <div style='float: right;'>
@@ -90,3 +25,15 @@
     </form>   
 
 {% endblock content %}
+
+{% comment %} <form action="" method="post">
+        {% csrf_token %}
+        {{ form1 }}
+    <input type="submit" class="btn btn-info" value="Salvar Idioma">
+    </form>
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form2 }}
+        <input type="submit" class="btn btn-info" value="Salvar Lingua">
+        
+    </form> {% endcomment %}
