implementando dois forms num unico template+

--- a/projeto/avalista/templates/avalista_form.html
+++ b/projeto/avalista/templates/avalista_form.html
@@ -14,6 +14,18 @@
                     {% render_field form1.avalista class="form-control"  %}
                 </div>
             </div>
+            <div class="col-sm-4">
+                <div class="form-group" >
+                    <label for="" class="required" >{{form1.cpf_avalista.label}} </label>
+                    {% render_field form1.cpf_avalista class="form-control"  %}
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="form-group" >
+                    <label for="" class="required" >{{form2.teste.label}} </label>
+                    {% render_field form2.teste class="form-control"  %}
+                </div>
+            </div>
             
             
         </div>
