Models de avalista/fiador refeito

--- a/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
@@ -246,7 +246,7 @@
             <div class="col-sm-2">                    
                 <div class="form-group" >                
                     <label for="" >{{form.rep_contato1.label}} </label>        
-                    {% render_field form.rep_contato1 class="form-control cel-phone-mask" type="text" %}
+                    {% render_field form.rep_contato1 class="form-control phone-mask" type="text" %}
                 </div>
             </div>
             <div class="col-sm-2">                    
