--- a/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
@@ -344,14 +344,25 @@
         </div>          
     </div> 
     <div id="Page3" class="tabcontent">  
-         {% if cliente_cnpj %}     
-            <h2>olá</h2>
+        {% if cliente_cnpj %}     
+            <div class="col-sm-6">                    
+                <div class="form-group" >                
+                    <label for="" >{{form1.fiador.label}} </label>        
+                    {% render_field form1.fiador class="form-control" %}
+                </div>                    
+            </div>
         {% else %}     
         <div class="row">
             <div class="col-sm-6">                    
                 <div class="form-group" >                
                     <label for="" >{{form2.fiador_nome.label}} </label>        
                     {% render_field form2.fiador_nome class="form-control" %}
+                </div>                    
+            </div>
+            <div class="col-sm-6">                    
+                <div class="form-group" >                
+                    <label for="" >{{form2.fiador_copia.label}} </label>        
+                    {% render_field form2.fiador_copia class="form-control" %}
                 </div>                    
             </div>
         {% endif %} 
