--- a/projeto/core/templates/includes/nav.html
+++ b/projeto/core/templates/includes/nav.html
@@ -79,6 +79,8 @@ body {
     <a href="{% url 'core:cliente_select' %}">Clientes</a>
     <a href="{% url 'avalista:avalista_list' %}">Fiador</a>
     <a href="{% url 'emprestimo:emprestimo_list' %}">Empréstimos</a>
+    <a href="{% url 'produto:produto_list' %}">Produto</a>
+    <a href="{% url 'estoque:estoque_entrada_list' %}">Estoque</a>
 
 	{% if user.is_authenticated %}
     	<a href="{% url 'logout' %}" style='float:right'>Encerrar Sessão</a>
